--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,16 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 .nav-link {
     color: black;
 }
 .nav-link:hover {
     color: white;
+}
+body {
+    background-image: url("./img/fondo1.jpg");
+    background-position:center;
+    background-repeat: no-repeat;
 }
