--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,11 @@ body {
     width: 4rem;
     height: 7vh;
 }
+.icon {
+    width: 2rem;
+    height: 3.5vh;
+}
+
+.icon:hover {
+    background-color: #990e31;
+}
