--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,18 @@ body {
 .icon:hover {
     background-color: #990e31;
 }
+
+.btn-carr{
+    padding:0.25rem;
+    width: 2rem;
+    height: 3.5vh;
+}
+
+#vaciar{
+    font-size: 1.3rem;
+}
+
+.carrito {
+    color: black;
+    font-size: 1.4rem;
+}
